# systemd-mcp

./: README.md  install.sh  mcp-manager.service  mcp_manager.py  mcp_server.conf  mcp_server.sh  mcpctl  uninstall.sh
mcp/: README.md  install.sh  main.py  pyproject.toml  stdio_server.py  streamable_http_server.py  tools.py  uninstall.sh
